Fixed login not centered

--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -24,9 +24,3 @@ body {
   align-items: center;
   color: white;
 }
-
-/* .flex-container-login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
